# EvolveMemory

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  app.py  demo.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
docs/: design-review-and-roadmap.md  index.html  phase2-optimization-spec.md
evals/: __init__.py  metrics.py  runner.py
evals/cases/: gate_eval.jsonl
examples/: adaptive_memory_replay.md  replay_adaptive_memory.py
memory_system/: __init__.py  context.py  demo.py  engine.py  events.py  extraction.py  gating.py  models.py  persistence.py  profiles.py  prompting.py  registry.py  retrieval.py  schema.py  service.py  settings.py  structured.py  writing.py
tests/: test_memory_system.py
